Update authWrapper div to include flex alignment

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
   <body>
     
-<div id="authWrapper" class="container py-5">
-  <div class="row justify-content-center">
+<div id="authWrapper" class="container py-5 d-flex align-items-center">
+  <div class="row justify-content-center w-100">
     <div class="col-md-5">
       <div class="card p-4">
         <h3 class="text-center mb-3">QuickSlot Login</h3>
